--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="qr_code">QR code</string>
     <string name="getQR">生成</string>
+    <string name="scan">扫码</string>
 
     <!--扫码-->
     <string name="qr_name">二维码</string>
